--- a/recipes/fried-eggs.html
+++ b/recipes/fried-eggs.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Fried-eggs</title>
+  <link rel="stylesheet" href="../style.css">
 </head>
 <body>
   <h1>Fried-eggs</h1>
