style lists and intro on pain page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
   <h1>Odin Recipes</h1>
-  <ul>
+  <h2>Glorious recipes at the touch of your fingertips</h2>
+  <p class="intro">Thinking about cooking something fast? Try our recipes of the day:</p>
+  <ul class="recipes">
     <li><a href="recipes/lasagna.html">Lasagna</a></li>
     <li><a href="recipes/bolognese.html">Bolognese</a></li>
     <li><a href="recipes/fried-eggs.html">Fried eggs<a></li>
